# rest-api-todo-app

./: .gitignore  Makefile  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt
app/: database.py  main.py
tests/: test_api.py
ui/: python_console_client.py  streamlit_client.py
